--- a/animation.html
+++ b/animation.html
@@ -7,40 +7,41 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <style>
-/*Animation*/
-
-.animation {
-    width: 300px;
-    height: 300px;
-    /* background-color: red; */
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEqYhCjVgYmZqYtFLJmWC_Ap28QuAXMgfusQ&usqp=CAU);
-    animation-name: example;
-    animation-duration: 4s;
-    background-repeat: no-repeat;
-}
-
-@keyframes example {
-    0% {
-        /* background-color: red; */
-        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2PgrREjlarLazzcnwZN_wu-CCA-fIQ80ezA&usqp=CAU);
+    /*Animation*/
+    
+    .animation {
+        margin-top: 3rem;
+        width: 600px;
+        height: 500px;
+        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEqYhCjVgYmZqYtFLJmWC_Ap28QuAXMgfusQ&usqp=CAU);
+        animation-name: example;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        background-size: cover;
         background-repeat: no-repeat;
     }
-    25% {
-        /* background-color: yellow; */
-        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZon3cc7ZNxNAFaGmodRU3RsJ0Z3t-RlO8_g&usqp=CAU);
-        background-repeat: no-repeat;
+    
+    @keyframes example {
+        0% {
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2PgrREjlarLazzcnwZN_wu-CCA-fIQ80ezA&usqp=CAU);
+            background-repeat: no-repeat;
+        }
+        25% {
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZon3cc7ZNxNAFaGmodRU3RsJ0Z3t-RlO8_g&usqp=CAU);
+            background-repeat: no-repeat;
+        }
+        40% {
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM5hdjUabWiU9JYRDbjCiQswKe7CFcTOCWIA&usqp=CAU);
+            background-repeat: no-repeat;
+        }
     }
-    40% {
-        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM5hdjUabWiU9JYRDbjCiQswKe7CFcTOCWIA&usqp=CAU);
-        background-repeat: no-repeat;
-    }
-}
 </style>
+
 <body>
-    <h6 style="text-align: center;"> Animation</h6>
-<div class="animation" style="margin-left: 40rem;"></div>
+    <h6 style="text-align: center; font-size: 30px;"> Animation</h6>
+    <div class="animation" style="margin: 0 auto;"></div>
 </body>
+
 </html>
