--- a/HTML tags.html
+++ b/HTML tags.html
@@ -19,7 +19,7 @@
 <body>
     <!-- body tag is used to display the content of the webpage on the browser and defines its structure -->
     <!-- header tag used to define the header of the webpage related to its contents like name of the institute displayed using head tags (h1,h2,etc) -->
-    <!-- anchor tag is used to for refrencing the pages or navigating the pages using href attribute -->
+    <!-- <a href=""></a> anchor tag is used to for refrencing pages or navigating the pages using href attribute -->
     <!-- list tag is usedto display the contents in ordered or unordered list format -->
     <!-- image tag is used to display the image on the webpage using src attribute -->
     <!-- p tag is used to display the paragraph content on the webpage -->
