--- a/Index.html
+++ b/Index.html
@@ -164,19 +164,19 @@
             </tr>
             <tr>
                 <td>102</td>
-                <td>Peter</td>
+                <td>Arun</td>
             </tr>
             <tr>
                 <td>103</td>
-                <td>Jancy</td>
+                <td>Praveed</td>
             </tr>
             <tr>
                 <td>104</td>
-                <td>Nancy</td>
+                <td>Chetan</td>
             </tr>
             <tr>
                 <td>105</td>
-                <td>Jack</td>
+                <td>Kiran</td>
             </tr>
         </tbody>
     </table>
